--- a/templates/graph.html
+++ b/templates/graph.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class=page>
-      <h1 style="text-align: center;">Some title.</h1>
+      <h1 style="text-align: center;">Historical Data</h1>
       {{ div | safe }}
     </div>
   </body>
